<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".KolrActivity"
    android:background="@drawable/dialog_light"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/btn_leaderboard"
            android:layout_width="@dimen/btn_img_size"
            android:layout_height="@dimen/btn_img_size"
            android:background="@drawable/btn_leaderboard"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btn_achievement"
            android:layout_width="@dimen/btn_img_size"
            android:layout_height="@dimen/btn_img_size"
            android:background="@drawable/btn_achievement" />
        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_settings"
            android:layout_width="@dimen/btn_img_size"
            android:layout_height="@dimen/btn_img_size"
            android:background="@drawable/btn_settings" />
    </LinearLayout>

    <View
    android:layout_width="fill_parent"
    android:layout_height="0dp"
        android:layout_weight="1"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/btn_img_size">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ToggleButton
                    android:id="@+id/btn_level_easy"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/btn_img_size"
                    android:textOn="@string/txt_easy"
                    android:textOff="@string/txt_easy"
                    android:background="@drawable/btn_green_toggle"
                    style="@style/kolr_shadowed_text_small"
                    android:textColor="@android:color/white"
                    android:padding="@dimen/padding_4dp"
                    android:layout_marginRight="@dimen/padding_4dp"
                    android:gravity="center"/>
                <ToggleButton
                    android:id="@+id/btn_level_medium"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/btn_img_size"
                    android:textOn="@string/txt_medium"
                    android:textOff="@string/txt_medium"
                    android:background="@drawable/btn_yellow_toggle"
                    style="@style/kolr_shadowed_text_small"
                    android:padding="@dimen/padding_4dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"/>
                <ToggleButton
                    android:id="@+id/btn_level_hard"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/btn_img_size"
                    android:textOn="@string/txt_hard"
                    android:textOff="@string/txt_hard"
                    android:background="@drawable/btn_red_toggle"
                    style="@style/kolr_shadowed_text_small"
                    android:padding="@dimen/padding_4dp"
                    android:layout_marginLeft="@dimen/padding_4dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>
    </ScrollView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btn_playpause_panel_rate"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_img_size"
        android:text="@string/txt_rate"
        android:background="@drawable/btn_red"
        style="@style/kolr_shadowed_text"
        android:layout_margin="@dimen/padding_8dp"
        android:paddingTop="@dimen/padding_4dp"
        android:paddingBottom="@dimen/padding_4dp"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_16dp"
        android:layout_gravity="center"
        android:textColor="@android:color/white"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_fb"
            android:layout_width="@dimen/btn_img_size"
            android:layout_height="@dimen/btn_img_size"
            android:background="@drawable/btn_fb"
            style="@style/kolr_shadowed_text"/>
        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_twitter"
            android:layout_width="@dimen/btn_img_size"
            android:layout_height="@dimen/btn_img_size"
            android:background="@drawable/btn_twitter"
            style="@style/kolr_shadowed_text"/>
        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_googleplus"
            android:layout_width="@dimen/btn_img_size"
            android:layout_height="@dimen/btn_img_size"
            android:background="@drawable/btn_googleplus"
            style="@style/kolr_shadowed_text"/>
    </LinearLayout>

    </LinearLayout>